# cct_data_visualisation_communication

./: Australia.csv  Australia.xlsx  Cleaning data.txt  DVC_CA_Marina.ipynb  README.md  exercise_week2.ipynb  homework_requirements.txt  raul_fuzita_AI_DV_DP_ICA.ipynb  raul_macedo_fuzita_AI_DV_DP_ICA.ipynb  setup.cfg
data_analytics_tools/: setup.py
data_analytics_tools/data_analytics_tools/: dictionary.py  invskew.py  mmnorm.py  pivot_melt.py  validatordf.py  zscore.py
data_analytics_tools/src/data_analytics_tools/: pivot_melt.py
