[metadata]
name = data_analytics_tools
version = 1.0.0
description = Python Distribution Utilities for Data Analytics
url = https://github.com/raulFuzita/cct_data_visualisation_communication/tree/CA1/data_analytics_tools
author = Raul Macedo Fuzita
author_email = raul.fuzita@gmail.com

[options]
packages = find:
